--- a/css/style.css
+++ b/css/style.css
@@ -268,6 +268,16 @@ a:hover {
 	margin-top: 1em;
 }
 
+.portfolio-info-2 img{
+	transition: all .2s ease-in-out;
+
+}
+
+.portfolio-info-2:hover img{
+	opacity: .6;
+}
+
+
 .portfolio-pic-2{
 	float: right;
 	width: 50%;
