--- a/css/style.css
+++ b/css/style.css
@@ -153,7 +153,7 @@ left:0px;
 #menu li a {
 	padding: 0px;
 	text-decoration: none;
-	font-size: 20px;
+	font-size: 26px;
 	color: #fff;
 	-webkit-transition: all 0.2s ease-in-out; 
 	-moz-transition: all 0.2s ease-in-out; 
@@ -459,8 +459,6 @@ left:5px;
 #skills{
 	float: left;
 	width: 100%;
-	height: 30em;
-	background-color: #FFF; 
 }
 
 .skills-title{
@@ -515,13 +513,37 @@ left:5px;
 /*--------footer--------*/
 
 
-footer{
+footer {
 	float: left;
-	width: 100%
-	height: 20em;
-	background-color: red;
+    width: 100%;
+    height: 10em;
+    background-color: #00C8FF;
+    color: #ffffff;
+    position: relative;
 }
 
+footer h1{
+	margin-bottom: 1em;
+}
+
+.social-icons{
+	text-align: center;
+	font-size: 32px;
+}
+
+.social-icons:hover img{
+	opacity: .6;
+	transform: scale(.90);
+}
+
+.social-icons img:hover {
+	opacity: 1;
+	transform: scale(1.1);
+}
+
+.social-icons img{
+	transition: all .2s ease-in-out;
+}
 
 
 
