--- a/css/style.css
+++ b/css/style.css
@@ -24,6 +24,31 @@
 }
 
 
+#hero h1 h2{
+
+}
+
+#hero h1{
+	color: #fff;
+	font-size: 7em;
+	margin-border: .5em;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	padding-top: 3em;
+}
+
+#hero h2{
+	color: #fff;
+	font-size: 2em;
+	margin-border: .5em;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+}
+
 
 
 
@@ -44,12 +69,14 @@
 
 
 nav ul {
-	background-color: #43a286;
+	background-color: #00C8FF;
 	overflow: hidden;
 	color: white;
 	padding: 0;
 	text-align: center;
 	margin: 0;
+	position: fixed;
+	width: 100%
 }
 
 nav ul li{
@@ -75,7 +102,7 @@ a:hover {
 
 
 
-@media (max-width: 580px){
+@media (max-width: 600px){
 	nav ul li{
 		box-sizing: border-box;
 		width: 100%;
@@ -87,121 +114,6 @@ a:hover {
 
 
 
-
-	/* fast reset *
-
-
-a { text-decoration: none; }
-a:hover { text-decoration: underline; }
-
-li { list-style: none; }
-
-.container-2 { margin: 0px 20% 0px 20%; }
-
-#head { margin-top: 5px; }
-
-#menu .box {
-	position: fixed;
-	text-align: center;
-	overflow: hidden;
-	z-index: -1;
-	opacity: 0;
-	width: 100%;
-	height: 4em;
-	left: 0px;
-	top: 0px;
-	background: #00C8FF;
-	-webkit-transition: all 0.3s ease-in-out; 
-	-moz-transition: all 0.3s ease-in-out; 
-	-o-transition: all 0.3s ease-in-out; 
-	transition: all 0.3s ease-in-out;
-}
-
-#menu ul {
-	position: relative;
-	top: 0px;
-left:0px;
-	-webkit-transform: scale(2);
-	-moz-transform: scale(2);
-	-ms-transform: scale(2);
-	transform: scale(2);
-	-webkit-transition: all 0.3s ease-in-out; 
-	-moz-transition: all 0.3s ease-in-out; 
-	-o-transition: all 0.3s ease-in-out; 
-	transition: all 0.3s ease-in-out;
-}
-
-#menu li { 
-	display: inline-block; 
-	margin: 10px;
-}
-
-#menu li a {
-	padding: 0px;
-	text-decoration: none;
-	font-size: 26px;
-	color: #fff;
-	-webkit-transition: all 0.2s ease-in-out; 
-	-moz-transition: all 0.2s ease-in-out; 
-	-o-transition: all 0.2s ease-in-out; 
-	transition: all 0.2s ease-in-out;
-}
-
-#menu li a:hover { /*gradian*/ }
-
-#menu li a i { 
-	margin-right: 5px; 
-	font-size: 20px;
-}
-
-#toggle-nav-label {
-	position: fixed;
-	color: rgba(0,0,0,0.5);
-	background: rgba(0,0,0,0.2);
-	text-align: center;
-	line-height: 30px;
-	font-size: 10px;
-	display: block;
-	cursor: pointer;
-	z-index: 500;
-	width: 25px;
-	height: 25px;
-top:5px;
-left:5px;
-	border-radius: 5px;
-}
-
-#toggle-nav { display: none; }
-
-#toggle-nav:checked ~ .box { 
-	opacity: 1;
-	z-index: 400;
-}
-
-#toggle-nav:checked ~ .box ul {
-	-webkit-transform: scale(1);
-	-moz-transform: scale(1);
-	-ms-transform: scale(1);
-	transform: scale(1);
-}
-
-#toggle-nav:checked ~ #toggle-nav-label { 
-	background: #fff; 
-	color: rgba(0,0,0,0.8);
-}
-
-#content { margin: 20px 0px 20px 0px; }
-
-#content h1 {
-	margin-bottom: 20px;
-	font-size: 30px;
-}
-
-#content p {
-	font-size: 14px;
-	line-height: 150%;
-	margin-bottom: 20px;
-}
 
 
 /*--------nav--------*/
