--- a/css/style.css
+++ b/css/style.css
@@ -50,6 +50,14 @@
 }
 
 
+.monogram{
+	width: 150px;
+	height: 150px;
+	background-image: url('../images/monogram.png');
+	margin-left: auto;
+	margin-right: auto;
+}
+
 
 
 /*--------Header--------*/
@@ -102,15 +110,6 @@ a:hover {
 
 
 
-@media (max-width: 600px){
-	nav ul li{
-		box-sizing: border-box;
-		width: 100%;
-		padding-bottom: 15px;
-
-
-	}
-}
 
 
 
@@ -123,7 +122,6 @@ a:hover {
 #about{
 	float: left;
 	width: 100%;
-	height: 40em;
 	background-color: #FFF;
 }
 
@@ -131,7 +129,6 @@ a:hover {
 .about{
 	float: left;
 	width: 100%;
-	height: 30em;
 	background-color: #FFF;
 }
 
@@ -251,16 +248,11 @@ a:hover {
 	float: left;
 	width: 50%;
 	height: 100%;
+	background-image: url('../images/typeface-showcase.png');
 }
 
-.portfolio-pic img{
-	transition: all .2s ease-in-out;
 
-}
 
-.portfolio-pic:hover img{
-	opacity: .6;
-}
 
 .portfolio-info{
 	float: right;
@@ -336,6 +328,7 @@ a:hover {
 	float: right;
 	width: 50%;
 	height: 100%;
+	background-image: url('../images/away-days-showcase.png');
 }
 
 .portfolio-pic-2 img{
@@ -347,7 +340,12 @@ a:hover {
 	opacity: .6;
 }
 
-
+.portfolio-pic-3{
+	float: left;
+	width: 50%;
+	height: 100%;
+	background-image: url('../images/suits-showcase.png');
+}
 
 /*--------end of portfolio--------*/
 
@@ -443,10 +441,38 @@ footer h1{
 	transition: all .2s ease-in-out;
 }
 
+/*--------end footer--------*/
 
-/*--------tablet--------*/
+
+/*--------media queries--------*/
 
 
+@media (max-width: 600px){
+	nav ul li{
+		box-sizing: border-box;
+		width: 100%;
+
+
+	}
+
+	#hero h1{
+		font-size: 5em;
+		text-align: center;
+	}
+
+	.portfolio-info{
+		display: none;
+		width: .000001em;
+	}
+
+	.portfolio-pic{
+		width: 100%;
+	}
+
+}
+
+
+/*--------media queries--------*/
 
 
 
